Feature: graffiti (#18)
graffiti upgrades